--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                        <div class="experience-progress">
                           <span class="experience-rounder"></span>
                           <span class="experience-line"></span>
-                      </div>
+                    <!--  </div>
                       <div>
                           <h3 class="experience-title">Teaching Assistant CS 150L</h3>
                           <span class="experience-subtitle">San Diego State University</span>
@@ -172,7 +172,7 @@
                               August 2024 - Present
                           </div>
                       </div>
-                  </div>
+                  </div> --> 
                 
                   <div class="experience-data">
                       <div>
