--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
         <h1 class="title">Samvedhya Bendapudi</h1>
         <p class="section-text-p2">Software Developer | Full Stack Developer</p>
         <div class="btn-container">
-          <button
-            class="btn btn-color-2"
-            onclick="window.open('./assets/Samvedhya_Internship.pdf')"
-          >
-            Download CV
-            
+          \<button
+  class="btn btn-color-2"
+  onclick="window.open('./assets/Samvedhya_Internship.pdf')"
+>
+  Download CV
+</button>
+
             
         </div>
         <div id="socials-container">
