--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                   </div>
 
 
-            <div class="experience-content experience-content-work experience-deactive" data-content id="work">
+           <div class="experience-content" id="work">
     <div class="experience-data">
         <div></div>
         <div class="experience-progress">
@@ -236,6 +236,7 @@
         </div>
     </div>
 </div>
+
 
       
   <!-- </section>
