--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h1 class="title">Samvedhya Bendapudi</h1>
         <p class="section-text-p2">Software Developer | Full Stack Developer</p>
         <div class="btn-container">
-          \<button
+          <button
   class="btn btn-color-2"
   onclick="window.open('./assets/Samvedhya_Internship.pdf')"
 >
