--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="btn-container">
           <button
   class="btn btn-color-2"
-  onclick="window.open('./assets/Samvedhya_Internship.pdf')"
+  onclick="window.open('./assets/Samvedhya Internship Resume.pdf')"
 >
   Download CV
 </button>
