--- a/index.html
+++ b/index.html
@@ -404,6 +404,14 @@
             <button class="btn btn-color-1" onclick="location.href='https://www.linkedin.com/in/samvedhya-bendapudi';"
             ></button>
         </div>
+         <div class="contact-info-container">
+          <img
+            src="./assets/phone.png"
+            alt="Phone icon"
+            class="icon contact-icon"
+          />
+          <p><a href="">+1-(832)-(806)-(9945)</a></p>
+        </div>
         
       </div>
     </section>
