--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                           <span class="experience-line"></span>
                       </div>
                       <div>
-                          <h3 class="experience-title">Software Development Intern</h3>
+                          <h3 class="experience-title">Software Engineer Intern</h3>
                           <span class="experience-subtitle">MPB Ark Exim Pvt. Ltd.</span>
                           <div class="experience-calendar">
                               <i class="uil uil-calendar-alt"></i>
@@ -207,7 +207,7 @@
 
                   <div class="experience-data">
                       <div>
-                          <h3 class="experience-title">Full Stack Developer Intern</h3>
+                          <h3 class="experience-title">Software Developer Intern</h3>
                           <span class="experience-subtitle">Skillsquad</span>
                           <div class="experience-calendar">
                               <i class="uil uil-calendar-alt"></i>
